--- a/.github/workflows/rasa_actions.yml
+++ b/.github/workflows/rasa_actions.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Run Taskwarrior command
         run: task sync
       - name: Create Taskwarrior config
-        run: echo ~/.taskrc
-      - name: Skip prompt for creating sample configuration file
-        run: echo yes
+        run: |
+            echo ~/.taskrc
+            echo yes
       - name: Run Taskwarrior version
         run: task version  
       - name: Commit changes
