--- a/.github/workflows/rasa_actions.yml
+++ b/.github/workflows/rasa_actions.yml
@@ -6,70 +6,72 @@ on:
       - main
 
 jobs:
-  super-linter:
+  linter:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Install Pylint
+        run: pip install pylint
+      - name: Run Pylint
+        run: pylint test_cart_api.py
 
-      - name: Run Super-Linter
-        uses: github/super-linter@v4
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   taskwarrior:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Install Taskwarrior
         run: sudo apt-get update && sudo apt-get install -y taskwarrior
-        
+
       - name: Create Taskwarrior configuration file
         run: echo "data.location = ~/.task" >> ~/.taskrc
       - name: Prompt for creating sample configuration file
         run: echo yes
       - name: Run Taskwarrior version
         run: task version
-  
+
         # Scenario 1: Adds tasks to Taskwarrior
       - name: Add new task commands
-        run: | 
-              task add Create test plan
-              task add Modify payment test cases
-              task add Setup test framework
-              task add "Create test plan" due:tomorrow
-              task add Work on legacy code
-              task add Update test libraries 
-              task add Modify test data for carts
-        
-          # Scenario 2: Complete a task in Taskwarrior
+        run: |
+          task add Create test plan
+          task add Modify payment test cases
+          task add Setup test framework
+          task add "Create test plan" due:tomorrow
+          task add Work on legacy code
+          task add Update test libraries 
+          task add Modify test data for carts
+
+        # Scenario 2: Complete a task in Taskwarrior
       - name: Complete a task
-        run: task 2 'done'
-        
+        run:
+          task 2 'done'
+
           # Scenario 3: Show all tasks
-      - name : List all pending tasks
-        run: task list
-        
+      - name: List all pending tasks
+        run:
+          task list
+
           # Scenario 4: Modify a task
-      - name : Modify task
+      - name: Modify task
         run: task 3 modify due:eom
 
-      # Scenario 5: Set priority for a task 
+      # Scenario 5: Set priority for a task
       - name: Set priority for a task
-        run: task 5 modify priority:H Do ASAP   
+        run:
+          task 5 modify priority:H Do ASAP
 
-         # Scenario 6: Delete a task
+          # Scenario 6: Delete a task
       - name: Delete a task
-        run: |
-          task delete 4
+        run: task delete 4
       - name: Confirm file deletion
-        run: echo yes 
-    
-         # Scenario 7: Sync tasks
+        run:
+          echo yes
+
+          # Scenario 7: Sync tasks
       #- name: Show Taskwarrior sync tasks
-      #   run: task sync 
-        
-          # Scenario 8: List tasks
+      #   run: task sync
+
+      # Scenario 8: List tasks
       - name: List tasks
         run: task list
   tests:
