resolves lint issues

--- a/.github/workflows/rasa_actions.yml
+++ b/.github/workflows/rasa_actions.yml
@@ -61,11 +61,11 @@ jobs:
           task 5 modify priority:H Do ASAP
 
           # Scenario 6: Delete a task
-      - name: Delete a task
-        run: task delete 4
-      - name: Confirm file deletion
-        run:
-          echo yes
+     # - name: Delete a task
+     #   run: task delete 4
+     # - name: Confirm file deletion
+     #   run:
+     #     echo yes
 
           # Scenario 7: Sync tasks
       #- name: Show Taskwarrior sync tasks
